# libfprint-CS9711

./: .devenv.flake.nix  .gitlab-ci.yml  HACKING.md  Makefile  NEWS  README.md  devenv.nix  enrolled.pgm  finger.pgm  meson.build  meson_options.txt  test  test-storage.variant  test.c  testlib  testlib.c  verify.pgm
.devenv/: profile  run
.direnv/: devenv-profile-055cdab360ce745fb7ef64376fc0bf28f300d650.rc  devenv-profile-11948eae2e10b6941a7987769415cee3c51a7ed1.rc  devenv-profile-181ff3e7f590bde36fadbeb95932705ad9ef93d8.rc  devenv-profile-19d5e5e6a66f78d7f53d78fa753c0dd94ca077c9.rc  devenv-profile-1a7f1e0d9888266efa57ed807cad87b590c2f7df.rc  devenv-profile-2719454ee24bfc6be3614f946458b36386d59a25.rc  devenv-profile-31390e7b908e80d0053e5237dca9d68da47da388.rc  devenv-profile-3164816640f9658fbeef28059a7dab70a3dee55f.rc  devenv-profile-5938be27646b5ec061abbb86b2d6a5f38094db51.rc  devenv-profile-5bc47f9dabc6ee73d1c30940b6f508aa9e3a5dad.rc  devenv-profile-5e3afbf078053fd8169760340da72102b4d00a63.rc  devenv-profile-6f30c11f3d87995191496515c89f6de6b4394b2e.rc  devenv-profile-77ddc023b417958588c7f1f2e21a23c19e6711ea.rc  devenv-profile-83dba8950cfb278fbace3675655e7a86da57731b.rc  devenv-profile-92948a7f78ffe344e10e9fb6d08acf81aac6fcae.rc  devenv-profile-9b27b111e8614103644e4b15254e21b02d98587a.rc  devenv-profile-a294f51e9396583f73df4314970377af3e02b2bd.rc  devenv-profile-a331199077535ba198047a26f2988194233e5058.rc  devenv-profile-ace93cb737ff18e4f4cd2e5d84c8b0f39f6b4d36.rc  devenv-profile-b978647cf7f82543ad49142e7cf0f088f7f848c8.rc  devenv-profile-c31264bce1afcdfd360fb347228972a6ccc30f73.rc  devenv-profile-c67873660de1b10aad9c4a120b0d12f9c90f06d2.rc  devenv-profile-e05d3fd51cf8429d2d3eb9e48585b962db14e6b2.rc  devenv-profile-e9d88d0cb167c666742aa3e8d401d3665a1ff6cc.rc  devenv-profile-f732d15fbcdb750677dd6c5a6861a0f4c6692938.rc
.gitlab-ci/: Dockerfile  libfprint-image-variables.yaml  libfprint-templates.yaml
cocci/: 00-misc-cleanups.cocci  01-endpoint.cocci  02-type-renames.cocci  03-function-renames.cocci  04-misc-renames.cocci  05-libusb-1.cocci  06-libusb-callback-1.cocci  (+6 more)
examples/: cpp-test.cpp  delete.c  enroll.c  identify.c  img-capture.c  manage-prints.c  meson.build  sendvirtcmd.py  sendvirtimg.py  storage.c  storage.h  utilities.c  utilities.h  verify.c  verify_live.c  virtmissensor.py
examples/prints/: README
libfprint/: drivers_api.h  fp-context.c  fp-device-private.h  fp-device.c  fp-device.h  fp-image-device-private.h  fp-image-device.c  fp-image.c  fp-image.h  fp-print-private.h  fp-print.c  fp-print.h  fp-sdcp-device-private.h  fp-sdcp-device.c  fp-sdcp-device.h  fp_internal.h  fpi-assembling.c  fpi-assembling.h  fpi-async.c  fpi-async.h  fpi-byte-reader.h  fpi-byte-utils.h  fpi-byte-writer.c  fpi-byte-writer.h  fpi-compat.h  fpi-context.h  fpi-core.c  fpi-core.h  fpi-data.c  fpi-dev-img.c  fpi-dev.c  fpi-dev.h  fpi-device.c  fpi-device.h  fpi-image-device.c  fpi-image-device.h  fpi-image.c  fpi-image.h  fpi-img.c  fpi-log.h  (+20 more)
libfprint/drivers/: aes1610.c  aes1660.c  aes1660.h  aes2501.c  aes2501.h  aes2550.c  aes2550.h  aes2660.c  aes2660.h  aes3500.c  aes3k.c  aes3k.h  aes4000.c  aeslib.c  aeslib.h  aesx660.c  aesx660.h  driver_ids.h  egis0570.c  egis0570.h  elan.c  elan.h  elanspi.c  elanspi.h  etes603.c  fdu2000.c  nb1010.c  upeksonly.c  upeksonly.h  upektc.c  upektc.h  upektc_img.c  upektc_img.h  upekts.c  uru4000.c  vcom5s.c  vfs0050.c  vfs0050.h  vfs101.c  vfs301.c  (+15 more)
libfprint/drivers/cs9711/: cs9711.c  cs9711.h
libfprint/drivers/egismoc/: egismoc.c  egismoc.h
libfprint/drivers/elanmoc/: elanmoc.c  elanmoc.h
libfprint/drivers/elanmoc2/: elanmoc2.c  elanmoc2.h
libfprint/drivers/focaltech_moc/: focaltech_moc.c  focaltech_moc.h
libfprint/drivers/fpcmoc/: fpc.c
libfprint/drivers/goodixmoc/: goodix.c  goodix.h  goodix_proto.c  goodix_proto.h
libfprint/drivers/realtek/: realtek.c  realtek.h
libfprint/drivers/synaptics/: bmkt.h  bmkt_internal.h  bmkt_message.c  bmkt_message.h  bmkt_response.h  sensor.c  sensor.h  synaptics.c  synaptics.h  usb_transport.c  util.c
libfprint/drivers/synaptics/include/: bmkt.h  bmkt_internal.h  bmkt_message.h  bmkt_response.h  crc.h  event.h  mutex.h  sensor.h  synaptics.h  thread.h  usb_transport.h
libfprint/drivers/synaptics/include/platform/linux/: platform.h
libfprint/drivers/synaptics/include/platform/posix/: plat_thread.h  posix.h
libfprint/drivers/synaptics/include/transport/: transport.h  usb_transport.h
libfprint/drivers/synaptics/src/: auth.c  bmkt.c  bmkt_message.c  crc.c  enroll.c  sensor.c  synaptics.c  util.c
libfprint/drivers/synaptics/src/platform/linux/: plat_event.c  plat_log.c
libfprint/drivers/synaptics/src/platform/posix/: plat_mutex.c  plat_thread.c  posix.c
libfprint/drivers/synaptics/src/transport/: transport.c  usb_transport.c
libfprint/nbis/: update-from-nbis.sh
libfprint/nbis/include/: lfs.h
libfprint/nbis/mindtct/: contour.c  minutia.c  remove.c  ridges.c  shape.c
libfprint/sigfm/: binary.hpp  img-info.hpp  meson.build  sigfm.cpp  sigfm.h  tests-embedded.hpp  tests.cpp
tests/: README-umockdev  README.md  capture.py  create-driver-test.py.in  driver.test.in  libfprint.supp  meson.build  test-device-fake.c  test-device-fake.h  test-fp-context.c  test-fp-device.c  test-fpi-assembling.c  test-fpi-device.c  test-fpi-ssm.c  test-generated-hwdb.sh  test-utils.c  test-utils.h  test.in  umockdev-test.py  valgrind-python.supp  virtual-device.py  virtual-image.py  virtual-sdcp.py
tests/egis0570/: device
tests/egismoc/: custom.pcapng  custom.py  device
tests/egismoc-05a1/: custom.pcapng  device
tests/elan/: capture.ioctl
tests/elanmoc/: custom.pcapng  device
tests/elanmoc2/: custom.pcapng  custom.py  device
tests/elanspi/: capture.ioctl
tests/focaltech_moc/: custom.pcapng  custom.py  device
tests/fpcmoc/: custom.py
tests/goodixmoc/: custom.ioctl  custom.pcapng  custom.py  device
tests/realtek/: custom.pcapng  custom.py  device
tests/sdcp-key-db/: cert9.db  key4.db
tests/synaptics/: custom.ioctl  custom.py
tests/upektc_img-tcs1s/: capture.pcapng  device
(+17 files in other folders)
